--- a/article.html
+++ b/article.html
@@ -125,8 +125,8 @@
 				<div>
 					<h3>Email NewsLetter</h3>
 					<p>Lorem ipsum dolor sit amet.</p>
-					<form>
-						<input type="text" placeholder="Enter Email..." />
+					<form name="contact" method="POST" data-netlify="true">
+						<input type="email" name="email" placeholder="Enter Email..." />
 						<input type="submit" value="Subscribe" class="btn btn-primary" />
 					</form>
 				</div>
